--- a/src/test/java/org/xmlbeam/tutorial/e12_xml3d/test.html
+++ b/src/test/java/org/xmlbeam/tutorial/e12_xml3d/test.html
@@ -6,14 +6,10 @@
 		<script type="text/javascript" src="http://www.xml3d.org/xml3d/script/tools/camera.js"></script>
 	</head>
 	<body>
+		<span>Click and drag to rotate the triangles</span><p/>
 		<xml3d id="MyXml3d" class="xml3d" style="width: 450px; height: 300px; border: 1px solid gray" xmlns="http://www.xml3d.org/2009/xml3d">
+		<view id="defaultView" position="-1 0 -8" orientation="0 1 0 3.3"/>  
 			<mesh type="triangles">
- <!-- 
-				<int name="index">0 1 2 </int>
-				<float3	name="position">-1 -1 -5 1 -1 -5 0 1 -5 </float3>
-				<float3 name="normal">0 0 1 0 0 1 0 0 1 </float3>
-				-->
-				
 			</mesh> 
 		</xml3d>
 	</body>
